--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bluewaweconsultancy",
   "version": "0.1.0",
-  "homepage": "https://gayan3720.github.io/bluewaveconsultancy/",
+  "homepage": "https://gayan3720.github.io/bluewaweconsultancy/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
+    "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
