--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
