update package json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bluewaweconsultancy",
   "version": "0.1.0",
-  "homepage": "https://gayan3720.github.io/bluewaweconsultancy/",
+  "homepage": "https://www.aquabloomfishfarm.com",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
